--- a/src/Makefile.phoenix
+++ b/src/Makefile.phoenix
@@ -1,11 +1,11 @@
 include DefinesPG.mk
 
-default: src/gm_dense_phoenix src/mm_dense_phoenix
+default: gm_dense_phoenix mm_dense_phoenix
 
-src/%.o: src/%.cpp
+%.o: %.cpp
 	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
 
-src/%: src/%.o
+%: %.o
 	@mkdir -p bin/$(@D)
 	$(CXX) -fpermissive $(CFLAGS) -o bin/$@ $@.o $(LIBS)
 
