--- a/src/Makefile.phoenix
+++ b/src/Makefile.phoenix
@@ -8,13 +8,13 @@ default: \
 gm_dense_phoenix \
 mm_dense_phoenix
 
-gm_dense_phoenix: %.o
-	@mkdir -p $(HOME)/bin/$(@D)
-	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+#gm_dense_phoenix: %.o
+#	@mkdir -p $(HOME)/bin/$(@D)
+#	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
 
-mm_dense_phoenix: %.o
-	@mkdir -p $(HOME)/bin/$(@D)
-	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+#mm_dense_phoenix: %.o
+#	@mkdir -p $(HOME)/bin/$(@D)
+#	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
 
 %.o : %.cpp
 	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
