--- a/src/Makefile.hybrid
+++ b/src/Makefile.hybrid
@@ -19,4 +19,7 @@ mm_sparse_graphchi: mm_sparse_graphchi.cpp
 	@mkdir -p $(HOME)/bin/$(@D)
 	$(CPP) $(CPPFLAGS) -I$(INCLUDE_GC) -I$(GC_HOME)/src $@.cpp -o $(HOME)/bin/$@ $(LINKERFLAGS)
 
+clean:
+	rm -rf *.o
+
 
