--- a/src/Makefile.phoenix
+++ b/src/Makefile.phoenix
@@ -8,20 +8,18 @@ default: \
 gm_dense_phoenix \
 mm_dense_phoenix
 
-#gm_dense_phoenix: %.o
-#	@mkdir -p $(HOME)/bin/$(@D)
-#	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+mm_dense_phoenix.o: mm_dense_phoenix.cpp
+	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
 
-#mm_dense_phoenix: %.o
-#	@mkdir -p $(HOME)/bin/$(@D)
-#	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+gm_sparse_phoenix.o: gm_sparse_phoenix.cpp
+	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
 
 %.o : %.cpp
 	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
 
-% : %.o
-	@mkdir -p $(HOME)/bin/$(@D)
-	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+#% : %.o
+#	@mkdir -p $(HOME)/bin/$(@D)
+#	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
 
 clean:
 	rm -rf *.o
