--- a/src/Makefile.phoenix
+++ b/src/Makefile.phoenix
@@ -8,7 +8,7 @@ default: \
 gm_dense_phoenix \
 mm_dense_phoenix
 
-gm_sparse_phoenix : gm_sparse_phoenix.o
+gm_dense_phoenix : gm_dense_phoenix.o
 	@mkdir -p $(HOME)/bin/$(@D)
 	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
 
