--- a/src/Makefile.phoenix
+++ b/src/Makefile.phoenix
@@ -10,24 +10,17 @@ mm_dense_phoenix
 
 gm_dense_phoenix : gm_dense_phoenix.o
 	@mkdir -p $(HOME)/bin/$(@D)
-	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+	$(CPP) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
 
 mm_dense_phoenix : mm_dense_phoenix.o
 	@mkdir -p $(HOME)/bin/$(@D)
-	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+	$(CPP) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
 
 mm_dense_phoenix.o: mm_dense_phoenix.cpp
-	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
+	$(CPP) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
 
 gm_sparse_phoenix.o: gm_sparse_phoenix.cpp
-	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
-
-#%.o : %.cpp
-#	$(CXX) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
-
-#% : %.o
-#	@mkdir -p $(HOME)/bin/$(@D)
-#	$(CXX) -fpermissive $(CFLAGS) -o $(HOME)/bin/$@ $@.o $(LIBS)
+	$(CPP) -fpermissive $(CFLAGS) -c $< -o $@ -I$(PX_HOME)/$(INC_DIR)
 
 clean:
 	rm -rf *.o
