Imported from https://majdsoud@github.com/majdsoud/PG.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Phoenix + GraphChi
+[access "refs/*"]
+	owner = group user/majdsoud
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/majdsoud
+	label-Verified = -1..+1 group user/majdsoud
+	push = group user/majdsoud
+	read = group user/majdsoud
+	rebase = group user/majdsoud
+	removeReviewer = group user/majdsoud
+	submit = group user/majdsoud
+[access "refs/heads/*"]
+	create = group user/majdsoud
+	push = +force group user/majdsoud
+	pushMerge = group user/majdsoud
+	read = group user/majdsoud
+[access "refs/tags/*"]
+	push = group user/majdsoud
+	push = +force group user/majdsoud
